# finance-o-matic

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_initial.py  0002_concept_dependencies.py  0003_concept_carry_behaviour.py  0004_snapshots.py  0005_processes.py  0006_scheduled_trigger.py  0007_snapshot_status.py  0008_entities.py  0009_many_to_many_groups.py  0010_snapshot_fx_rates.py  da2bd4b4966e_add_entity_type_id_to_concepts.py
apps/api/app/: main.py
apps/api/app/api/v1/: concepts.py  currencies.py  entities.py  entity_types.py  export.py  formulas.py  import_.py  init.py  processes.py  router.py  snapshots.py
apps/api/app/auth/: users.py
apps/api/app/core/: config.py  db.py
apps/api/app/models/: concept.py  concept_dependency.py  concept_entry.py  concept_group_membership.py  currency.py  entity.py  entity_property_def.py  entity_property_value.py  entity_type.py  fx_rate.py  process.py  process_concept.py  process_schedule.py  snapshot.py  snapshot_fx_rate.py  user.py
apps/api/app/schemas/: concept.py  entity.py  process.py  snapshot.py
apps/api/app/services/: process.py  scheduled_jobs.py  snapshot.py
apps/api/app/services/formula/: __init__.py  (+1 more)
apps/api/finance_o_matic_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: export_openapi.py  run-python.cjs  seed_currencies.py
apps/api/tests/: test_auth.py  test_concept_history_batch.py  test_concept_init.py  test_concept_model.py  test_concept_schemas.py  test_concepts_crud.py  test_concepts_evaluate.py  test_currencies.py  test_entity_type_init.py  test_export.py  test_formula_engine.py  test_formula_preview.py  test_fx_service.py  test_group_evaluation.py  test_import.py  test_process_snapshots.py  test_processes_crud.py  test_scheduled_jobs.py  test_snapshot_carry_forward.py  test_snapshot_fx_rates.py  test_snapshot_per_entity.py  test_snapshot_workflow.py
(+76 files in other folders)
