[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-o-matic-api"
version = "0.1.0"
description = "Finance-o-matic FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "fastapi-users[sqlalchemy]>=13.0.0",
  "httpx>=0.27.0",
  "simpleeval>=0.9.13",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "apscheduler>=3.10,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "anyio>=4.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-simplejson>=3.19.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
